[gd_scene load_steps=62 format=3 uid="uid://c04dju357r4ch"]

[ext_resource type="Script" path="res://scripts/test.gd" id="1_orlxx"]
[ext_resource type="Texture2D" uid="uid://ddjkw5tfrtluy" path="res://assets/sprites/BACKDROP (1).png" id="2_dlk4w"]
[ext_resource type="PackedScene" uid="uid://cxqtcpag3hu6t" path="res://scenes/player.tscn" id="2_dx1fj"]
[ext_resource type="PackedScene" uid="uid://dar5ii7mai42s" path="res://scenes/football.tscn" id="3_bwlbk"]
[ext_resource type="PackedScene" uid="uid://biwxr5p2r81vh" path="res://scenes/throw_arrow.tscn" id="4_cb74x"]
[ext_resource type="PackedScene" uid="uid://bwdbhfqjsh7ac" path="res://scenes/UI.tscn" id="6_1m6by"]
[ext_resource type="AudioStream" uid="uid://xwo33eerweop" path="res://assets/sounds/Ludum Dare 30 04.ogg" id="7_xqjtu"]
[ext_resource type="PackedScene" uid="uid://cmesa55u1b8pk" path="res://scenes/game_over.tscn" id="8_i55yk"]
[ext_resource type="Texture2D" uid="uid://b8l44wfqy72ax" path="res://assets/sprites/scoreboard/SCOREBOARD.png" id="9_b7ntm"]
[ext_resource type="Texture2D" uid="uid://dlv4m0m3rrq40" path="res://assets/sprites/scoreboard/0.png" id="10_jpmuu"]
[ext_resource type="Texture2D" uid="uid://c17tkj0fb8f8c" path="res://assets/sprites/scoreboard/1.png" id="11_mpong"]
[ext_resource type="Texture2D" uid="uid://wneqg6u47y34" path="res://assets/sprites/scoreboard/2.png" id="12_6x4wc"]
[ext_resource type="Texture2D" uid="uid://crfnyukabvg8s" path="res://assets/sprites/scoreboard/3.png" id="13_445bu"]
[ext_resource type="Texture2D" uid="uid://dqhcyuk6ensii" path="res://assets/sprites/scoreboard/4.png" id="14_h10uj"]
[ext_resource type="Texture2D" uid="uid://cicdvkobky5rm" path="res://assets/sprites/scoreboard/5.png" id="15_mhjph"]
[ext_resource type="Texture2D" uid="uid://dx72agihykal6" path="res://assets/sprites/scoreboard/6.png" id="16_2ks32"]
[ext_resource type="Texture2D" uid="uid://duv3mci6fh6l8" path="res://assets/sprites/scoreboard/7.png" id="17_j3tt5"]
[ext_resource type="Texture2D" uid="uid://dlwsao77ihj0k" path="res://assets/sprites/scoreboard/8.png" id="18_4ytch"]
[ext_resource type="Texture2D" uid="uid://c8je4dgv7b6h1" path="res://assets/sprites/scoreboard/9.png" id="19_72hs8"]
[ext_resource type="Script" path="res://scenes/score_manager.gd" id="20_hvlw1"]
[ext_resource type="Texture2D" uid="uid://rkbisok3u8wq" path="res://assets/sprites/scoreboard/lives_1.png" id="21_xydg0"]
[ext_resource type="Texture2D" uid="uid://dgoi6utlg1r21" path="res://assets/sprites/scoreboard/lives_2.png" id="22_m4jm7"]
[ext_resource type="Texture2D" uid="uid://d1iyoanws3i0x" path="res://assets/sprites/scoreboard/lives_3.png" id="23_35wwj"]
[ext_resource type="Script" path="res://scripts/help.gd" id="24_jman8"]
[ext_resource type="Texture2D" uid="uid://47qu8efqkryo" path="res://assets/sprites/tutorial/tutorial_board.png" id="25_xs41l"]
[ext_resource type="Texture2D" uid="uid://bgxlrg6hxu3xh" path="res://assets/sprites/tutorial/spacebar.png" id="26_jqriy"]
[ext_resource type="Texture2D" uid="uid://c5lfpip5u3nyj" path="res://assets/sprites/usc_running.png" id="27_r5r7o"]
[ext_resource type="Texture2D" uid="uid://d18tg278ppdjm" path="res://assets/sprites/arrow2.png" id="28_roq0o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fj8n8"]
size = Vector2(1827, 197)

[sub_resource type="AtlasTexture" id="AtlasTexture_6cupe"]
atlas = ExtResource("10_jpmuu")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_0y6yt"]
atlas = ExtResource("11_mpong")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_yn3y0"]
atlas = ExtResource("12_6x4wc")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_iybfo"]
atlas = ExtResource("13_445bu")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3tmt"]
atlas = ExtResource("14_h10uj")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_6tamr"]
atlas = ExtResource("15_mhjph")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qrm5a"]
atlas = ExtResource("16_2ks32")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_p613h"]
atlas = ExtResource("17_j3tt5")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5j6ig"]
atlas = ExtResource("18_4ytch")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_oxf8e"]
atlas = ExtResource("19_72hs8")
region = Rect2(0, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_x8r3a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6cupe")
}],
"loop": true,
"name": &"0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0y6yt")
}],
"loop": true,
"name": &"1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yn3y0")
}],
"loop": true,
"name": &"2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iybfo")
}],
"loop": true,
"name": &"3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3tmt")
}],
"loop": true,
"name": &"4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6tamr")
}],
"loop": true,
"name": &"5",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qrm5a")
}],
"loop": true,
"name": &"6",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p613h")
}],
"loop": true,
"name": &"7",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5j6ig")
}],
"loop": true,
"name": &"8",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oxf8e")
}],
"loop": true,
"name": &"9",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_bfvvi"]
font_size = 30

[sub_resource type="AtlasTexture" id="AtlasTexture_gjhgs"]
atlas = ExtResource("21_xydg0")
region = Rect2(0, 0, 40, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_56b5k"]
atlas = ExtResource("22_m4jm7")
region = Rect2(0, 0, 40, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_2t85s"]
atlas = ExtResource("23_35wwj")
region = Rect2(0, 0, 40, 73)

[sub_resource type="SpriteFrames" id="SpriteFrames_44vpv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjhgs")
}],
"loop": true,
"name": &"life_1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_56b5k")
}],
"loop": true,
"name": &"life_2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2t85s")
}],
"loop": true,
"name": &"life_3",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_11sj8"]
atlas = ExtResource("26_jqriy")
region = Rect2(0, 0, 100, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_bk1r2"]
atlas = ExtResource("26_jqriy")
region = Rect2(100, 0, 100, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_xm5h7"]
atlas = ExtResource("26_jqriy")
region = Rect2(200, 0, 100, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_78k1g"]
atlas = ExtResource("26_jqriy")
region = Rect2(300, 0, 100, 30)

[sub_resource type="SpriteFrames" id="SpriteFrames_s5ysq"]
animations = [{
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_11sj8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bk1r2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xm5h7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_78k1g")
}],
"loop": true,
"name": &"spacebar",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_yocup"]
atlas = ExtResource("27_r5r7o")
region = Rect2(0, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_hupdy"]
atlas = ExtResource("27_r5r7o")
region = Rect2(30, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_yq5yx"]
atlas = ExtResource("27_r5r7o")
region = Rect2(60, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_q267r"]
atlas = ExtResource("27_r5r7o")
region = Rect2(90, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_fiw84"]
atlas = ExtResource("27_r5r7o")
region = Rect2(120, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjmdg"]
atlas = ExtResource("27_r5r7o")
region = Rect2(150, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_ioj2j"]
atlas = ExtResource("27_r5r7o")
region = Rect2(180, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_n64pj"]
atlas = ExtResource("27_r5r7o")
region = Rect2(210, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbt64"]
atlas = ExtResource("27_r5r7o")
region = Rect2(240, 0, 30, 30)

[sub_resource type="SpriteFrames" id="SpriteFrames_c8d5i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yocup")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hupdy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yq5yx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q267r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fiw84")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjmdg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ioj2j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n64pj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbt64")
}],
"loop": true,
"name": &"tutorial_receiver",
"speed": 10.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_f6qlm"]
font_size = 30

[node name="TestLevel" type="Node2D"]
script = ExtResource("1_orlxx")

[node name="Backdrop" type="Sprite2D" parent="."]
position = Vector2(572, 359)
scale = Vector2(1.94187, 1.94187)
texture = ExtResource("2_dlk4w")

[node name="Player" parent="." instance=ExtResource("2_dx1fj")]
position = Vector2(-233, 323)
scale = Vector2(4, 4)

[node name="Throw_Arrow" parent="." instance=ExtResource("4_cb74x")]
position = Vector2(-146, 320)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 331)
zoom = Vector2(0.5, 0.5)

[node name="Enemy_Timer" type="Timer" parent="."]
one_shot = true

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(872, -377)
shape = SubResource("RectangleShape2D_fj8n8")

[node name="StaticBody2D2" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(860.5, 1073.5)
shape = SubResource("RectangleShape2D_fj8n8")

[node name="Football" parent="." instance=ExtResource("3_bwlbk")]
position = Vector2(-165, 319)

[node name="Ui" parent="." instance=ExtResource("6_1m6by")]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_xqjtu")
parameters/looping = true

[node name="Game Over" parent="." instance=ExtResource("8_i55yk")]
visible = false
z_index = 25

[node name="Scoreboard" type="Sprite2D" parent="."]
position = Vector2(572.25, -181.125)
scale = Vector2(1.35875, 1.35875)
texture = ExtResource("9_b7ntm")

[node name="Distance_1" type="AnimatedSprite2D" parent="Scoreboard"]
position = Vector2(-70.0361, 16.6065)
scale = Vector2(0.723827, 0.723827)
sprite_frames = SubResource("SpriteFrames_x8r3a")
animation = &"3"

[node name="Distance_10" type="AnimatedSprite2D" parent="Scoreboard"]
position = Vector2(-141.516, 16.6065)
scale = Vector2(0.723827, 0.723827)
sprite_frames = SubResource("SpriteFrames_x8r3a")
animation = &"2"

[node name="Streak_10" type="AnimatedSprite2D" parent="Scoreboard"]
position = Vector2(75.8123, 16.6065)
scale = Vector2(0.723827, 0.723827)
sprite_frames = SubResource("SpriteFrames_x8r3a")
animation = &"0"

[node name="Streak_1" type="AnimatedSprite2D" parent="Scoreboard"]
position = Vector2(154.513, 16.6065)
scale = Vector2(0.723827, 0.723827)
sprite_frames = SubResource("SpriteFrames_x8r3a")
animation = &"3"

[node name="ScoreManager" type="Node2D" parent="Scoreboard"]
script = ExtResource("20_hvlw1")

[node name="Label" type="Label" parent="Scoreboard"]
offset_left = -183.441
offset_top = -78.6568
offset_right = -39.4407
offset_bottom = -36.6568
text = "SCORE"
label_settings = SubResource("LabelSettings_bfvvi")
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Scoreboard"]
offset_left = 39.5584
offset_top = -78.6568
offset_right = 183.558
offset_bottom = -36.6568
text = "STREAK
"
label_settings = SubResource("LabelSettings_bfvvi")
horizontal_alignment = 1

[node name="LifeIndicator" type="AnimatedSprite2D" parent="Scoreboard"]
position = Vector2(2.69264e-05, 53.4499)
scale = Vector2(0.947562, 0.998097)
sprite_frames = SubResource("SpriteFrames_44vpv")
animation = &"life_3"

[node name="Label" type="Node2D" parent="."]
visible = false
script = ExtResource("24_jman8")

[node name="Sprite2D" type="Sprite2D" parent="Label"]
position = Vector2(-139, -136)
scale = Vector2(2.91333, 2.48)
texture = ExtResource("25_xs41l")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Label"]
position = Vector2(39, -242)
scale = Vector2(1.6, 1.6)
sprite_frames = SubResource("SpriteFrames_s5ysq")
animation = &"spacebar"
frame_progress = 0.601637

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="Label"]
position = Vector2(39, -28)
scale = Vector2(3.35, 3.61667)
sprite_frames = SubResource("SpriteFrames_c8d5i")
animation = &"tutorial_receiver"
frame_progress = 0.015985

[node name="Sprite2D2" type="Sprite2D" parent="Label"]
position = Vector2(42, -134)
scale = Vector2(1.32, 1.32)
texture = ExtResource("28_roq0o")

[node name="Label" type="Label" parent="Label"]
offset_left = -502.0
offset_top = -289.0
offset_right = -63.0
offset_bottom = -183.0
text = "Press and hold spacebar to charge a throw..."
label_settings = SubResource("LabelSettings_f6qlm")
autowrap_mode = 2
uppercase = true

[node name="Label2" type="Label" parent="Label"]
offset_left = -503.0
offset_top = -161.0
offset_right = -64.0
offset_bottom = -98.0
text = "aim with your mouse..."
label_settings = SubResource("LabelSettings_f6qlm")
autowrap_mode = 2
uppercase = true

[node name="Label3" type="Label" parent="Label"]
offset_left = -503.0
offset_top = -54.0
offset_right = -64.0
offset_bottom = 9.0
text = "and pass to a receiver!"
label_settings = SubResource("LabelSettings_f6qlm")
autowrap_mode = 2
uppercase = true

[connection signal="enemy_spawned" from="." to="." method="_on_enemy_spawned"]
[connection signal="start_throw" from="Player" to="Throw_Arrow" method="_on_player_start_throw"]
[connection signal="start_throw" from="Player" to="Label" method="_on_player_start_throw"]
[connection signal="throw_ball" from="Player" to="Throw_Arrow" method="_on_player_throw_ball"]
[connection signal="throw_ball" from="Player" to="Football" method="_on_player_throw_ball"]
[connection signal="timeout" from="Enemy_Timer" to="." method="_on_enemy_timer_timeout"]
[connection signal="lose" from="Football" to="Scoreboard/ScoreManager" method="_on_football_lose"]
